<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="csi.fhict.org.csi_week_1.MainActivity"
tools:showIn="@layout/activity_main"
android:background="#ffff"
android:weightSum="1">

<ImageView
    android:id="@+id/imageView"
    android:layout_width="@dimen/joe_image"
    android:layout_height="@dimen/joe_image"
    android:src="@drawable/joe_pesci"
    android:contentDescription="@string/contentDescription"
    android:scaleType="fitXY"
    android:layout_gravity="center_horizontal" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#C0C52A">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C0C52A"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:weightSum="2" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Name:"
                    android:id="@+id/lblName"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/villain_name"
                    android:id="@+id/tvName"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C0C52A"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:weightSum="2" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Gender:"
                    android:id="@+id/lblGender"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/villain_gender"
                    android:id="@+id/tvGender"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C0C52A"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:weightSum="2" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Age:"
                    android:id="@+id/lblAge"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/villain_age"
                    android:id="@+id/tvAge"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C0C52A"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="320dp"
                android:layout_height="30dp"
                android:weightSum="2" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Bounty:"
                    android:id="@+id/lblBounty"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/villain_bounty"
                    android:id="@+id/tvBounty"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="6dp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:text="@string/details_string"
        android:id="@+id/tvDetails"
        android:layout_weight="0.56"
        android:textColor="#000"
        android:textSize="22sp">
    </TextView>

</LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:id="@+id/svDetails">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:id="@+id/textView"
            android:textColor="#000"
            android:textSize="20sp" />
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Report"
        android:id="@+id/btnReport"
        android:textColor="#000"
        android:background="@color/colorPrimary" />
</LinearLayout>

</LinearLayout>

